Added base setup

--- a/container-queries.html
+++ b/container-queries.html
@@ -36,6 +36,15 @@
                 </article> -->
             </section>
         </main>
-        <footer></footer>
+        <footer>
+          <nav class="footer-nav">
+              <ul>
+                  <li><a href="nesting.html">Nesting</a></li>
+                  <li><a href="container-queries.html">Container Queries</a></li>
+                  <li><a href="pseudo-classes.html">Pseudo Classes</a></li>
+                  <li><a href="units.html">Units</a></li>
+              </ul>
+          </nav>
+      </footer>
     </body>
 </html>
