--- a/units.html
+++ b/units.html
@@ -11,13 +11,9 @@
             <h1>The State of CSS 2023</h1>
         </header>
         <main>
-            <section class="section-container">
-                <article>
-                    <h2 class="fancyHeader">Delectus iste consectetur</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, unde velit molestiae dolorem, commodi harum est at necessitatibus, delectus iste consectetur excepturi magnam nisi voluptatem numquam ex! Earum, dolores ratione?</p>
-                    <a href="#" class="btn">More about Lorem</a>
-                </article>
-            </section>
+            <div class="box">
+                Just a box
+            </div>
         </main>
         <footer>
             <nav class="footer-nav">
